More Java 8 style improvements